--- a/app/assets/stylesheets/mainpage.scss
+++ b/app/assets/stylesheets/mainpage.scss
@@ -71,7 +71,8 @@
 }
 
 .splash-left img {
-  border-radius: 8px;
+  border-radius: 4px;
+  height: 320px;
 }
 
 .splash-right {
