--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   flex-direction: row;
   display: inline;
-  font-size: 16px;
+  font-size: 15px;
   overflow: hidden;
 }
 
@@ -12,7 +12,7 @@
   /* color: #666666; */
   /* border: 1px solid #666666; */
   margin-top: 25px;
-  padding: 13px;
+  padding: 8px;
   /* box-shadow: 0px 0px 5px lightgrey; */
   border-bottom: 1px solid lightgrey;
   border-top: 1px solid lightgrey;
