--- a/app/assets/stylesheets/picture_scroll.scss
+++ b/app/assets/stylesheets/picture_scroll.scss
@@ -7,8 +7,7 @@
 .index-header {
   display: flex;
   justify-content: center;
-  // border: 1px solid green;
-  margin-top: 25px;
+  // border: 1px solid green
   font-size: 30px;
 }
 
